--- a/test/index.html
+++ b/test/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     
-    <title>Test | Socialink</title>
+    <title>Test | Flickable</title>
     <meta name="description" content="${description}" />
     
     <script src='https://cdnjs.cloudflare.com/ajax/libs/less.js/2.5.3/less.min.js'></script>
