スマホのときに動かなくなっていたのを修正

--- a/test/page.html
+++ b/test/page.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class='h100vh f flex-column'>
-      <div class='f fh h44 bg-lightgray'>Header</div>
+      <div class='f fh h44 flex-fixed bg-lightgray'>Header</div>
       <div class='navbar f border-bottom'>
         <div class='nav-item w-full f fh p16' data-index='0'>HOGE</div>
         <div class='nav-item w-full f fh p16' data-index='1'>FOO</div>
@@ -48,7 +48,7 @@
           </div>
         </div>
       </div>
-      <div class='f fh h50 bg-lightgray'>Footer</div>
+      <div class='f fh flex-fixed h50 bg-lightgray'>Footer</div>
     </div>
   </body>
 </html>
