page test の個別スクロール対応

--- a/test/page.html
+++ b/test/page.html
@@ -25,9 +25,15 @@
         <div class='nav-item w-full f fh p16' data-index='1'>FOO</div>
         <div class='nav-item w-full f fh p16' data-index='2'>BAR</div>
       </div>
-      <div class='main s-full overflow-y-scroll'>
-        <div id='slide' class='contents f overflow-hidden'>
-          <div id='HOGE' class='content w-full flex-fixed ovreflow-y-scroll'>
+      <div class='main s-full overflow-hidden'>
+        <div id='slide' class='s-full contents f overflow-hidden'>
+          <div id='HOGE' class='s-full content w-full flex-fixed overflow-y-scroll'>
+            <div class='p16 border-bottom'>HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE </div>
+            <div class='p16 border-bottom'>HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE </div>
+            <div class='p16 border-bottom'>HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE </div>
+            <div class='p16 border-bottom'>HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE </div>
+            <div class='p16 border-bottom'>HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE </div>
+            <div class='p16 border-bottom'>HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE </div>
             <div class='p16 border-bottom'>HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE </div>
             <div class='p16 border-bottom'>HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE </div>
             <div class='p16 border-bottom'>HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE </div>
@@ -38,12 +44,12 @@
             <div class='p16 border-bottom'>HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE </div>
             <div class='p16 border-bottom'>HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE </div>
           </div>
-          <div id='FOO' class='content w-full flex-fixed'>
+          <div id='FOO' class='s-full content w-full flex-fixed overflow-y-scroll'>
             <div class='p16 border-bottom'>FOO FOO FOO FOO FOO FOO FOO FOO FOO </div>
             <div class='p16 border-bottom'>FOO FOO FOO FOO FOO FOO FOO FOO FOO </div>
             <div class='p16 border-bottom'>FOO FOO FOO FOO FOO FOO FOO FOO FOO </div>
           </div>
-          <div id='BAR' class='content w-full flex-fixed'>
+          <div id='BAR' class='s-full content w-full flex-fixed overflow-y-scroll'>
             <div class='p16 border-bottom'>BAR BAR BAR BAR BAR BAR BAR BAR BAR </div>
           </div>
         </div>
