--- a/test/page.html
+++ b/test/page.html
@@ -45,7 +45,7 @@
             <div class='p16 border-bottom'>HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE HOGE </div>
           </div>
           <div id='FOO' class='s-full content w-full flex-fixed overflow-y-scroll'>
-            <div class='p16 border-bottom'>FOO FOO FOO FOO FOO FOO FOO FOO FOO </div>
+            <a href='./drag.html' class='block p16 border-bottom'>FOO FOO FOO FOO FOO FOO FOO FOO FOO </a>
             <div class='p16 border-bottom'>FOO FOO FOO FOO FOO FOO FOO FOO FOO </div>
             <div class='p16 border-bottom'>FOO FOO FOO FOO FOO FOO FOO FOO FOO </div>
           </div>
