--- a/test/page.html
+++ b/test/page.html
@@ -48,6 +48,9 @@
             <a href='./drag.html' class='block p16 border-bottom'>FOO FOO FOO FOO FOO FOO FOO FOO FOO </a>
             <div class='p16 border-bottom'>FOO FOO FOO FOO FOO FOO FOO FOO FOO </div>
             <div class='p16 border-bottom'>FOO FOO FOO FOO FOO FOO FOO FOO FOO </div>
+            <a class='f fh p16 border-bottom' href='https://google.com'>
+              <img src='https://dummyimage.com/600x400/000/fff' />
+            </a>
           </div>
           <div id='BAR' class='s-full content w-full flex-fixed overflow-y-scroll'>
             <div class='p16 border-bottom'>BAR BAR BAR BAR BAR BAR BAR BAR BAR </div>
